# dealls-be-case-study

./: .dockerignore  .env  .gitignore  Cargo.toml  README.md  be.dockerfile  pg.dockerfile  test_integration.py  test_requirements.txt
.github/workflows/: unit-test.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20250613_083042_init.rs  m20250615_063806_generate_users.rs  util.rs
src/: auth.rs  config.rs  consts.rs  main.rs  pages.rs  utils.rs
src/entity/: attendance_period.rs  employee_attendance.rs  employee_overtime.rs  employee_reimbursement.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
src/pages/: attendance.rs  auth.rs
src/pages/attendance/: extractor.rs  model.rs
