[package]
name = "dealls-be-case-study"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = "0.4.41"
dotenvy = "0.15.7"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
# migration = { version = "0.1.0", path = "migration" }
sea-orm = { version = "1.1.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "with-chrono", "mock", "debug-print"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-actix-web = "0.7.18"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = "1.17.0"
